# stringutils

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile
include/: stringutils.h
src/: main.cpp  stringutils.cpp
tests/: test_stringutils.cpp
